Add an option to prompt to delete source files after clearing successful completed items.

--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -138,6 +138,7 @@
 						<RowDefinition Height="22" />
 						<RowDefinition Height="22" />
 						<RowDefinition Height="22" />
+						<RowDefinition Height="22" />
 						<RowDefinition Height="Auto" />
 						<RowDefinition Height="24" />
 						<RowDefinition Height="Auto" />
@@ -168,25 +169,30 @@
 						Content="Keep scans after completion (allows editing completed items)"
 						IsChecked="{Binding KeepScansAfterCompletion}"
 						Height="16" HorizontalAlignment="Left" Margin="15,0,0,0" VerticalAlignment="Center" />
-					<Label
+					<CheckBox
 						Grid.Row="4"
+						Content="Prompt to delete source files after clearing successful completed items"
+						IsChecked="{Binding DeleteSourceFilesOnClearingCompleted}"
+						Height="16" HorizontalAlignment="Left" Margin="15,0,0,0" VerticalAlignment="Center" />
+					<Label
+						Grid.Row="5"
 						Content="Logging Verbosity:" Height="28" HorizontalAlignment="Left" Margin="6,0,0,0" VerticalAlignment="Center" />
 					<ComboBox
-						Grid.Row="4"
+						Grid.Row="5"
 						Height="23" HorizontalAlignment="Left" Margin="121,0,0,0" SelectedValue="{Binding LogVerbosity}" SelectedValuePath="Content" VerticalAlignment="Center" Width="42">
 						<ComboBoxItem Content="0" />
 						<ComboBoxItem Content="1" />
 						<ComboBoxItem Content="2" />
 					</ComboBox>
 					<TextBlock
-						Grid.Row="4"
+						Grid.Row="5"
 						HorizontalAlignment="Left" Margin="182,0,0,0" Text="Log verbosity will take effect on next scan or program restart." TextWrapping="Wrap" VerticalAlignment="Center" Visibility="{Binding LogVerbosityWarningVisible, Converter={StaticResource VisibilityConverter}}" />
 					
 					<TextBlock
-						Grid.Row="5"
+						Grid.Row="6"
 						Height="23" HorizontalAlignment="Left" Margin="11,5,0,0" Text="Minimum length of title to scan (seconds):" VerticalAlignment="Center" />
 					<my:NumberBox
-						Grid.Row="5" HorizontalAlignment="Left" Margin="243,2,0,0" VerticalAlignment="Top" AllowEmpty="False" Width="45"
+						Grid.Row="6" HorizontalAlignment="Left" Margin="243,2,0,0" VerticalAlignment="Top" AllowEmpty="False" Width="45"
 						Number="{Binding MinimumTitleLengthSeconds, Mode=TwoWay}" Minimum="0" />
 				</Grid>
 			</TabItem>
