--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="VidCoder.App"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:converters="clr-namespace:VidCoder.Converters">
+	xmlns:converters="clr-namespace:VidCoder.Converters"
+	xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
+	xmlns:s="clr-namespace:System;assembly=mscorlib">
 	<Application.Resources>
 		<converters:VisibilityConverter x:Key="VisibilityConverter" />
 		<converters:EnumBoolConverter x:Key="EnumBoolConverter" />
@@ -11,6 +13,63 @@
 		<converters:InverseBoolConverter x:Key="InverseBoolConverter" />
 		<converters:PercentDisplayConverter x:Key="PercentDisplayConverter" />
 		<converters:DoubleDisplayConverter x:Key="DoubleDisplayConverter" />
+		
+		<Style x:Key="CenteredCheckBox" TargetType="CheckBox">
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type CheckBox}">
+						<BulletDecorator Background="#00FFFFFF" SnapsToDevicePixels="True">
+							<mwt:BulletChrome 
+									Background="{TemplateBinding Panel.Background}" BorderBrush="{TemplateBinding Border.BorderBrush}"
+									RenderMouseOver="{TemplateBinding UIElement.IsMouseOver}" RenderPressed="{TemplateBinding ButtonBase.IsPressed}"
+									IsChecked="{TemplateBinding ToggleButton.IsChecked}"
+									Width="13" Height="13"/>
+						</BulletDecorator>
+						<ControlTemplate.Triggers>
+							<Trigger Property="ContentControl.HasContent">
+								<Setter Property="FrameworkElement.FocusVisualStyle">
+									<Setter.Value>
+										<Style TargetType="{x:Type IFrameworkInputElement}">
+											<Style.Resources>
+												<ResourceDictionary />
+											</Style.Resources>
+											<Setter Property="Control.Template">
+												<Setter.Value>
+													<ControlTemplate>
+														<Rectangle Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2" Margin="14,0,0,0" SnapsToDevicePixels="True" />
+													</ControlTemplate>
+												</Setter.Value>
+											</Setter>
+										</Style>
+									</Setter.Value>
+								</Setter>
+								<Setter Property="Control.Padding">
+									<Setter.Value>
+										<Thickness>
+											0,0,0,0</Thickness>
+									</Setter.Value>
+								</Setter>
+								<Trigger.Value>
+									<s:Boolean>
+										True</s:Boolean>
+								</Trigger.Value>
+							</Trigger>
+							<Trigger Property="UIElement.IsEnabled">
+								<Setter Property="TextElement.Foreground">
+									<Setter.Value>
+										<DynamicResource ResourceKey="{x:Static SystemColors.GrayTextBrushKey}" />
+									</Setter.Value>
+								</Setter>
+								<Trigger.Value>
+									<s:Boolean>
+										False</s:Boolean>
+								</Trigger.Value>
+							</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
 		
 		<Style x:Key="SectionHeader" TargetType="TextBlock">
 			<Setter Property="FontWeight" Value="Bold" />
