--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="VidCoder.View.OptionsDialog"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:Model="clr-namespace:VidCoder.Model" Title="Options" Height="415" Width="571"
+	xmlns:resx="clr-namespace:VidCoder.Properties"
 	Style="{StaticResource NormalWindow}" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" Closing="Window_Closing" xmlns:my="clr-namespace:VidCoder.Controls">
 	<Window.Resources>
 		<Style x:Key="EmphasizedTitle" TargetType="TextBlock">
@@ -102,19 +103,69 @@
 			</TabItem>
 			<TabItem Header="Audio / Subtitles">
 				<Grid>
-					<Label Height="28" HorizontalAlignment="Left" Margin="6,8.75,0,0" VerticalAlignment="Top" Width="127">Preferred Language:</Label>
+					<TextBlock 
+						Height="23" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlock4" Text="Automatic Audio Selection" VerticalAlignment="Top" />
+					<RadioButton 
+						Content="Disabled" Height="16" HorizontalAlignment="Left" Margin="28,31,0,0" Name="radioButton3" VerticalAlignment="Top"
+						IsChecked="{Binding AutoAudio, Converter={StaticResource EnumBoolConverter}, ConverterParameter=Disabled}"
+						GroupName="autoAudio1"
+						ToolTip="{x:Static resx:Resources.AutoAudioDisabledToolTip}"/>
+					<RadioButton 
+						Content="Language:" Height="16" HorizontalAlignment="Left" Margin="28,53,0,0" Name="radioButton4" VerticalAlignment="Top"
+						IsChecked="{Binding AutoAudio, Converter={StaticResource EnumBoolConverter}, ConverterParameter=Language}"
+						GroupName="autoAudio2"/>
 					<ComboBox
-						Height="23" Margin="130,11,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"
-						ItemsSource="{Binding Languages}" SelectedValue="{Binding NativeLanguageCode}"
-						DisplayMemberPath="Name" SelectedValuePath="Code" />
+						Height="23" Margin="107,51,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"
+						ItemsSource="{Binding Languages}" SelectedValue="{Binding AudioLanguageCode}"
+						DisplayMemberPath="Name" SelectedValuePath="Code"
+						IsEnabled="{Binding AutoAudioLanguageSelected}"/>
+					<CheckBox 
+						Content="Include all tracks" Height="16" HorizontalAlignment="Left" Margin="50,77,0,0" Name="checkBox5" VerticalAlignment="Top"
+						IsChecked="{Binding AutoAudioAll}"
+						IsEnabled="{Binding AutoAudioLanguageSelected}"/>
+					<RadioButton 
+						Content="All" Height="16" HorizontalAlignment="Left" Margin="28,98,0,0" Name="radioButton5" VerticalAlignment="Top"
+						IsChecked="{Binding AutoAudio, Converter={StaticResource EnumBoolConverter}, ConverterParameter=All}"
+						GroupName="autoAudio3"/>
+					
+					<TextBlock 
+						Height="23" HorizontalAlignment="Left" Margin="236,6,0,0" Name="textBlock5" Text="Automatic Subtitle Selection" VerticalAlignment="Top" />
 					<RadioButton
-						Height="16" Margin="59,43,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="327"
-						IsChecked="{Binding DubAudio}"
-						IsEnabled="{Binding DubAudioEnabled}">Use Preferred Language for audio track (dubbing)</RadioButton>
-					<RadioButton
-						Height="16" Margin="59,65,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="402"
-						IsChecked="{Binding DubAudio, Converter={StaticResource InverseBoolConverter}}"
-						IsEnabled="{Binding DubAudioEnabled}">Use foreign language for audio track and Preferred Language subtitles</RadioButton>
+						Content="Disabled" Height="16" HorizontalAlignment="Left" Margin="263,31,0,0" Name="radioButton6" VerticalAlignment="Top"
+						IsChecked="{Binding AutoSubtitle, Converter={StaticResource EnumBoolConverter}, ConverterParameter=Disabled}"
+						GroupName="autoSubtitle1"
+						ToolTip="{x:Static resx:Resources.AutoSubtitleDisabledToolTip}"/>
+					<RadioButton 
+						Content="Foreign Audio Search" Height="16" HorizontalAlignment="Left" Margin="263,53,0,0" Name="radioButton7" VerticalAlignment="Top"
+						ToolTip="{x:Static resx:Resources.ForeignAudioSearchToolTip}"
+						IsChecked="{Binding AutoSubtitle, Converter={StaticResource EnumBoolConverter}, ConverterParameter=ForeignAudioSearch}"
+						GroupName="autoSubtitle2"/>
+					<CheckBox 
+						Content="Burn in" Height="16" HorizontalAlignment="Left" Margin="285,73,0,0" Name="checkBox2" VerticalAlignment="Top"
+						ToolTip="{x:Static resx:Resources.BurnedSubtitleToolTip}"
+						IsChecked="{Binding AutoSubtitleBurnIn}"
+						IsEnabled="{Binding AutoSubtitleFasSelected}"/>
+					<RadioButton 
+						Content="Language:" Height="16" HorizontalAlignment="Left" Margin="263,95,0,0" Name="radioButton8" VerticalAlignment="Top"
+						IsChecked="{Binding AutoSubtitle, Converter={StaticResource EnumBoolConverter}, ConverterParameter=Language}"
+						GroupName="autoSubtitle3"/>
+					<ComboBox
+						Height="23" Margin="343,93,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"
+						ItemsSource="{Binding Languages}" SelectedValue="{Binding SubtitleLanguageCode}"
+						DisplayMemberPath="Name" SelectedValuePath="Code"
+						IsEnabled="{Binding AutoSubtitleLanguageSelected}"/>
+					<CheckBox 
+						Content="Only if different language from audio" Height="16" HorizontalAlignment="Left" Margin="285,121,0,0" Name="checkBox3" VerticalAlignment="Top"
+						IsChecked="{Binding AutoSubtitleOnlyIfDifferent}"
+						IsEnabled="{Binding AutoSubtitleLanguageSelected}"/>
+					<CheckBox 
+						Content="Include all tracks" Height="16" HorizontalAlignment="Left" Margin="285,143,0,0" Name="checkBox4" VerticalAlignment="Top"
+						IsChecked="{Binding AutoSubtitleAll}"
+						IsEnabled="{Binding AutoSubtitleLanguageSelected}"/>
+					<RadioButton 
+						Content="All" Height="16" HorizontalAlignment="Left" Margin="263,165,0,0" Name="radioButton9" VerticalAlignment="Top"
+						IsChecked="{Binding AutoSubtitle, Converter={StaticResource EnumBoolConverter}, ConverterParameter=All}"
+						GroupName="autoSubtitle4"/>
 				</Grid>
 			</TabItem>
 			<TabItem Header="Processes">
