Added updater support for beta updates track.

--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -28,18 +28,27 @@
 						IsChecked="{Binding PlaySoundOnCompletion}">Play sound on queue completion</CheckBox>
 
 					<TextBlock
-						Height="23" HorizontalAlignment="Left" Margin="10,100,0,0" Text="Preferred DVD player:" VerticalAlignment="Top" />
+						Height="23" HorizontalAlignment="Left" Margin="10,100,0,0" Text="Preferred DVD player:" VerticalAlignment="Top"
+						ToolTip="Choose the player you want to use for DVD sources."/>
 					<ComboBox 
 						Height="23" HorizontalAlignment="Left" Margin="133,97,0,0" VerticalAlignment="Top"
 						ItemsSource="{Binding PlayerChoices}"
 						DisplayMemberPath="Display"
-						SelectedItem="{Binding SelectedPlayer}" />
+						SelectedItem="{Binding SelectedPlayer}"
+						ToolTip="Choose the player you want to use for DVD sources."/>
 
 					<CheckBox
 						Height="16" Margin="10,135,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="182"
-						IsChecked="{Binding UpdatesEnabled}">Enable automatic updates</CheckBox>
+						IsChecked="{Binding UpdatesEnabled}">Automatic updates</CheckBox>
+					<CheckBox 
+						Content="Join the Beta update track" 
+						Height="16" HorizontalAlignment="Left" Margin="10,157,0,0" VerticalAlignment="Top"
+						IsChecked="{Binding BetaUpdates}"
+						IsEnabled="{Binding BetaUpdatesCheckBoxEnabled}"
+						ToolTip="{Binding BetaUpdatesToolTip}"
+						ToolTipService.ShowOnDisabled="True"/>
 					<Grid
-						Height="31" Margin="27,157,11,0" VerticalAlignment="Top"
+						Height="31" Margin="27,180,11,0" VerticalAlignment="Top"
 						Visibility="{Binding UpdatesEnabled, Converter={StaticResource VisibilityConverter}}">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="Auto" />
