Updating hb core to svn 4937, supporting same as source CFR, added support for new framerates and sample rates, added Apple TV 3 preset.
--HG--
branch : beta

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -83,7 +83,7 @@
 
 		<SolidColorBrush x:Key="DisabledBrush" Color="#4C4C4C" />
 		<Style x:Key="LongToolTip" TargetType="TextBlock">
-			<Setter Property="Width" Value="400" />
+			<Setter Property="MaxWidth" Value="400" />
 			<Setter Property="TextWrapping" Value="Wrap" />
 		</Style>
 		<Style x:Key="LongToolTipHolder" TargetType="FrameworkElement">
